maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:19: error: reassignment to val
    x = x + 1;
      ^JediEscaper:21: error: reassignment to val
      x = 0;
        ^JediEscaper:22: error: value += is not a member of Int
      y += 1;
        ^JediEscaper:33: error: value -= is not a member of Int
        c-=1;
         ^JediEscaper:40: error: value -= is not a member of Int
        c-=1;
         ^JediEscaper:47: error: value -= is not a member of Int
        c-=1;
         ^JediEscaper:54: error: value -= is not a member of Int
        c-=1;
         ^