maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code

override def run() {
  var I:Int = 1;
  var xBaggle:Int = 0;
  var yBaggle:Int = 0;
  var X:Int = 0;
  var Y:Int = 0;
  var C:Int = getMondeLargeur()*getMondeHauteur();
  marquerBaggle(xBaggle,yBaggle);
  C -= 1;
  X = xBaggle;
  Y = yBaggle;
  marquer(X,Y,I,C);
}

def marquerBaggle(x:Int,y:Int) {
  while ( aBiscuit(x,y) ){
    x = x + 1;
    if ( x == getMondeLargeur() ){
      x = 0;
      y += 1;
    }
  }
  setIndication(x,y,0);
}

def marquer(x:Int,y:Int,i:Int,c:Int) {
  if ( c != 0 ){
    if ( !aMurNord(x,y) ){
      if ( getIndication(x,y-1) != 9999 ){
        setIndication(x,y-1,i);
        c-=1;
        marquer(x,y-1,i+1,c);
      }
    }
    if ( !aMurOuest(x,y) ){
      if ( getIndication(x-1,y) != 9999 ){
        setIndication(x-1,y,i);
        c-=1;
        marquer(x-1,y,i+1,c);
      }
    }
    if ( !aMurSud(x,y) ){
      if ( getIndication(x,y+1) != 9999 ){
        setIndication(x,y+1,i);
        c-=1;
        marquer(x,y+1,i+1,c);
      }
    }
    if ( !aMurEst(x,y) ){
      if ( getIndication(x+1,y) != 9999 ){
        setIndication(x+1,y,i);
        c-=1;
        marquer(x+1,y,i+1,c);
      }
    }
  }
}

def aMurSud(x:Int,y:Int) : Boolean = {
  if ( y != getMondeHauteur()-1 ){
    return aMurNord(x,y+1);
  } else {
    return false;
  }
}

def aMurEst(x:Int,y:Int) : Boolean = {
  if ( x != getMondeLargeur()-1 ){
    return aMurNord(x+1,y);
  } else {
    return false;
  }
}